force-app/main/default/objects/vlocity_cmt__XOMEventListener__mdt/fields/vlocity_cmt__Priority__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Priority__c</fullName>
    <label>Priority</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>