force-app/main/default/objects/vlocity_cmt__XOMEventListener__mdt/fields/vlocity_cmt__VlocityOpenInterfaceClassName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__VlocityOpenInterfaceClassName__c</fullName>
    <description>VlocityOpenInterface-compliant class for event listener.</description>
    <label>Vlocity Open Interface Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>