force-app/main/default/objects/vlocity_cmt__XOMEventListener__mdt/fields/vlocity_cmt__XOMEvent__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__XOMEvent__c</fullName>
    <description>XOM Event this listener is for</description>
    <label>XOM Event</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>